--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,11 +11,33 @@ html(lang="en")
             form#jsLogin
                 input(placeholder="what's your name ? ", type="text")
         .gameContainer#jsGame 
-            div#jsNotifications
-            .chat 
+            .canvasContainer
+                #jsNotifications
+                #leaderNotif
+                #timeNotif
+                canvas#jsCanvas
+            .chat#jsChat
+                .playerBoard#jsPlayerBoard
+                    ul.players__list
                 ul.chat__messages#jsMessages 
                 form.chat__form#jsSendMsg
                     input(placeholder="write a message", type="text")
+            .controls#jsControls
+                .controls-range
+                    input#jsRange(type='range', min='0.1', max='10', value='2.5', step='0.1')
+                .controls-btns
+                    button#jsMode(type='button') Fill
+                    button#jsSave(type='button') Save
+                .controls-colors#jsColors
+                    .controls-color.jsColor(style='background-color: #2c2c2c;')
+                    .controls-color.jsColor(style='background-color: #ff5200;')
+                    .controls-color.jsColor(style='background-color: #fa9905;')
+                    .controls-color.jsColor(style='background-color: #f21170;')
+                    .controls-color.jsColor(style='background-color: #72147e;')
+                    .controls-color.jsColor(style='background-color: #ffc996;')
+                    .controls-color.jsColor(style='background-color: #ff8474;')
+                    .controls-color.jsColor(style='background-color: #9f5f80;')
+                    .controls-color.jsColor(style='background-color: #583d72;')
         script.
             window.events = !{events}
         script(src="/socket.io/socket.io.js")
